Improved code and Releasing new version